issues with images not showingup in DOM

--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-
-
 .grid{
     
     border: solid purple 5px;
     flex-wrap: wrap;
-    height: 300px;
-    width:400px;
+    height: 600px;
+    width:800px;
 
 }
